--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Page Title</title>
+  <title>Darsh</title>
 </head>
 <body>
 
-  <!-- Your content goes here -->
-
+ <h1 id ="top">About Me
+    <a href = "#bottom"><button> Click to go to bottom</button></a>
+  <h2>Keniel Carrow</h2>
+ </h1>
+<article>
+    <p> Hello I am Keniel and I like to play and watch basketball, Ill name my top 3 player I love to watch</p>
+    <h2>My top 5 players to watch
+        <ol>
+          <li>Lebron James</li>
+          <li>Stephen Curry</li>
+          <li>Luka Doncic</li>
+          <li>Anthony Edwards</li>
+          <li>Shai Gildeuos Alexander</li>
+        </ol>
+    </h2>
+    <h2> My Favorite players</h2>
+      <ul>
+        <li><a href = "https://www.india.gov.in">Darsh Singh</a></li>
+        <li><a href = ".\contact.html">Shaquille Oniel</a></li>
+        <li>Stephen Curry</li>
+      </ul>
+      <button>Click to see the best character in Naruto</button>
+  </article>
+  <footer id = "bottom">
+    <p>
+      Thank for looking at my top Basketball players I look forward to watching 
+    </p>
+  </footer>
+  <a href = "#top"><button>Click to go to top of page</button></a>
 </body>
 </html>
